# git-camus

./: .codecov.yml  .coverage  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readhedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CREDITS  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.toml  conftest.py  coverage.xml  git-camus.bat  git-camus.py  git-camus.sh  git_camus.bat  git_camus.py  git_camus.sh  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  python-package.yml  tests.yml
core/: config.py  git_operations.py
doc/: index.html
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: CNAME  conf.py  index.html  index.md
docs/source/: api.md  index.md  installation.md  sphinx.conf.py
frontend/: main.py
git_camus/: main.py
git_camus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
git_camus/cli/: __init__.py
git_camus/core/: __init__.py  config.py  ollama_client.py
git_camus/utils/: __init__.py
helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
requirements/: base.txt  dev.txt  test.txt
scripts/: build.sh  deploy.sh  docker-build.sh  setup-dev.sh  test.sh
src/git_camus/: __init__.py  main.py
src/git_camus/cli/: __init__.py  commands.py
src/git_camus/core/: __init__.py  config.py  git_operations.py  ollama_client.py
src/git_camus/utils/: __init__.py
src/tests/: __init__.py  test_integration.py
src/tests/unit/: __init__.py
src/tests/unit/test_core/: test_config.py  test_git_operations.py  test_ollama_client.py
tests/: __init__.py  test_git_camus.py  test_integration.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/test_cli/: __init__.py  test_commands.py
tests/unit/test_core/: __init__.py  test_config.py  test_git_operations.py  test_ollama_client.py
tools/: get-pip.py
